# Prisme

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: extension-ci.yml  extension-release-please.yml  frontend-ci.yml  worker-ci.yml
src/extension/: .ff_updates.json  .release-please-manifest.json  CHANGELOG.md  LICENSE  jest.setup.js  manifest.json  package-lock.json  package.json  popup.html  release-please-config.json
src/extension/src/: background.js  background.test.js  main.js  popup.js  popup.test.js
src/frontend/: .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.tsx  vitest.config.ts  vitest.setup.ts
src/frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
src/frontend/components/: account-card.test.tsx  account-card.tsx  account-dialog.tsx  account-filter-select.tsx  add-asset-value-dialog.tsx  add-cash-value-dialog.tsx  add-debt-value-dialog.tsx  add-goal-value-dialog.tsx  add-voucher-value-dialog.tsx  (+66 more)
src/worker/: .dockerignore  .env.example  Dockerfile  __main__.py  categorizer.py  conftest.py  income_forecast.py  pyproject.toml  schema.sql  utils.py  worker.py
src/worker/lib/LCLPy/: __init__.py  client.py
src/worker/lib/LCLPy/objects/: __init__.py  account.py  transaction.py
src/worker/script/: decrypt.py  seed_credentials.py
src/worker/tests/unit/: _fake_aiohttp.py  test_categorizer.py  test_income_forecast.py  test_lclpy_client.py  test_lclpy_objects.py  test_utils.py
(+71 files in other folders)
